@@ -4,6 +4,7 @@ Overview of changes in lightdm 0.2.4
     * Move Webkit greeter into separate module
     * Rename ldm-gtk-greeter to lightdm-gtk-greeter
     * Correctly pass LANG and LANGUAGE through to the session
+    * Correctly pass PATH through to the session
 
 Overview of changes in lightdm 0.2.3
 
